# wasmos

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BUG_REPORT.md  CFS_CUSTOM_FILE_SYSTEM.md  CMakeLists.txt  Kconfig  PREEMPTIVE_SCHEDULING_DESIGN.md  README.md  RING3_ISOLATION_PLAN.md  TASKS.md  THREADING.md  VIRTUAL_TERMINAL.md  WAMR_DEBUG_STATUS.md  logo.txt  package-lock.json  package.json  state.md  wasmo.ai  wasmos_wordmark.ai
.claude/: settings.local.json
.codex/: config.toml
.github/workflows/: ci.yml
boot/efi/: boot.c  uefi.h
cmake/: WasmosZigApp.cmake  WasmosZigUtil.cmake  warp_aot_cached.cmake
configs/: README.md  warp_single_defconfig  warp_smp_defconfig  wasm3_single_defconfig  wasm3_smp_defconfig  wasmos_defconfig
configs/device_manager/: ata.manifest
docs/: ARCHITECTURE.md  BUILD_SYSTEM.md  LOCK_HIERARCHY.md  RING3_ISOLATION_PLAN.md  SCRIPT_ENGINE.md  SMP_HANG_ANALYSIS.md  STATUS.md  TASKS.md  TEMP_RING3_HARDENING_CHECKLIST.md  THREADING.md  VIRTUAL_TERMINAL.md
docs/architecture/: 01-goals.md  02-current-system-summary.md  03-architectural-direction.md  04-boot-and-handoff.md  05-scheduling-and-preemption.md  05-x86-cpu-architecture.md  06-process-and-ipc.md  07-memory-management.md  07-scheduling-and-preemption.md  08-runtime-and-packaging.md  08-threading-and-lifecycle.md  09-drivers-and-services.md  09-process-and-ipc.md  (+28 more)
kernel/: block_ata.c  cpu.c  fs_fat.c  ipc.c  irq.c  kernel.c  memory.c  paging.c  physmem.c  process.c  process_manager.c  serial.c  wamr_context.c  wasm_chardev.c  wasm_driver.c  wasm_fat.c  wasmos_app.c
scripts/: generate_device_manager_manifest.cmake  initfs.toml  kconfig_to_cmake.py  kconfiglib_menuconfig.py  large_read.txt  make_initfs.py  make_wasmos_app.c  qemu_halt_test.py  qemu_ring3_fault_storm_test.py  qemu_ring3_halt_test.py  qemu_sched_stress_test.py  qemu_test_framework.py  qemu_ui_test.py  run_config.sh  run_ring3_shadow.py  run_unittest_suite.py  wasm_inspect.py  wasm_stack_check.py  write_smoke.txt
src/boot/: CMakeLists.txt  boot.c  elf.h  uefi.h
src/drivers/: CMakeLists.txt
src/drivers/ata/: CMakeLists.txt  ata.c  linker.metadata
src/drivers/chardev/: CMakeLists.txt  chardev_server.c
src/drivers/framebuffer/: CMakeLists.txt  fbtext_internal.h  font_8x16.h  framebuffer.ts  framebuffer_native.c  linker.metadata  render.c
src/drivers/framebuffer_pci/: CMakeLists.txt  framebuffer_pci_native.c  linker.metadata
src/drivers/fs_fat/: CMakeLists.txt  fs_fat.c  linker.manifest  linker.metadata
src/drivers/fs_init/: CMakeLists.txt  fs_init.c  linker.metadata
src/drivers/include/: wasmos_driver_abi.h  wasmos_native_driver.h
src/drivers/keyboard/: CMakeLists.txt  keyboard.ts  linker.manifest  linker.metadata
src/drivers/mouse/: CMakeLists.txt  linker.metadata  mouse.ts
src/drivers/rtc/: CMakeLists.txt  linker.metadata  rtc.ts
src/drivers/serial/: CMakeLists.txt  linker.manifest  linker.metadata  serial.ts
src/drivers/virtio_serial/: CMakeLists.txt  linker.metadata  virtio_serial.c
src/kernel/: CMakeLists.txt  capability.c  cpu.c  framebuffer.c  futex.c  hashmap.c  ipc.c  irq.c  kernel.c  kernel_boot_runtime.c  kernel_init_runtime.c  kernel_ring3_fault_runtime.c  kernel_ring3_probe_runtime.c  kernel_ring3_smoke_runtime.c  kernel_ring3_suite_runtime.c  kernel_sched_selftest_runtime.c  kernel_sched_smp_stress_runtime.c  kernel_selftest_runtime.c  kernel_threading_selftest_runtime.c  klog.c  kmem.c  libc.c  list.c  list_array_chunk.c  list_internal.h  list_linked.c  memory.c  memory_service.c  native_driver.c  paging.c  physmem.c  policy.c  poll.c  process.c  process_manager.c  process_manager.cpp  process_manager_buffers.c  process_manager_services.c  process_manager_spawn.c  ring3_native_probe.c  (+20 more)
src/kernel/arch/x86_64/: context_switch.S  cpu_isr.S  cpu_x86_64.c  entry.S  ioapic.c  irq_x86_64.c  lapic.c  linker.ld  ring3_native.ld  smp.c  smp_trampoline.S
src/kernel/include/: assert.h  boot.h  capability.h  console_ring.h  cpu.h  ctype.h  font_ipc.h  framebuffer.h  futex.h  gfx_ipc.h  hashmap.h  inttypes.h  io.h  ipc.h  irq.h  kernel_boot_runtime.h  kernel_init_runtime.h  kernel_ring3_fault_runtime.h  kernel_ring3_probe_runtime.h  kernel_ring3_smoke_runtime.h  kernel_ring3_suite_runtime.h  kernel_sched_selftest_runtime.h  kernel_sched_smp_stress_runtime.h  kernel_selftest_runtime.h  kernel_threading_selftest_runtime.h  klog.h  kmem.h  list.h  math.h  memory.h  memory_service.h  native_driver.h  paging.h  physmem.h  policy.h  poll.h  process.h  process_manager.h  process_manager_internal.h  rtc_ipc.h  (+23 more)
src/kernel/include/arch/x86_64/: cpu_x86_64.h  ioapic.h  irq_x86_64.h  lapic.h  msr.h  smp.h
src/kernel/warp/: cxx_abi.cpp  iostream_stubs.cpp  link.cpp  link.h  linker_stubs.cpp  mem_utils_kernel.cpp  os_api_checker_kernel.cpp  posix_kernel.c  ring3_trampolines.c  shim.cpp  shim.h  sjlj_unwind.cpp
src/kernel/warp/compat/: algorithm  array  atomic  cassert  cerrno  csignal  cstddef  cstdint  cstdlib  cstring  errno.h  exception  functional  initializer_list  iostream  limits  memory  mutex  new  ostream  pthread.h  sstream  stdexcept  string  tuple  type_traits  unistd.h  utility
src/kernel/warp/compat/sys/: mman.h  signal.h
src/kernel/wasm3/: link.c  link.h  probe.c  probe.h  shim.c
src/tools/warp_aot/: CMakeLists.txt  host_mem_utils.cpp  host_shim.cpp  warp_aot.cpp
tests/: test_boot_config.py  test_boot_smoke.py  test_chardev_preempt.py  test_cli.py  test_device_manager.py  test_fs_open_smoke.py  test_fs_write_smoke.py  test_hello_as.py  test_hello_c.py  test_hello_go.py  test_hello_rust.py  test_hello_zig.py  test_hw_discovery.py  test_init_smoke.py  test_ipc_call_correlation_spec.py  test_ipc_wakeup.py  test_irq_input.py  test_irq_route_capability.py  test_libui_click.py  test_make_wasmos_app_capabilities.py  test_memory_privilege_foundation_spec.py  test_preempt_smoke.py  test_ring3_smoke_target.py  test_shmem_grant_revoke_e2e.py  test_threading_ipc_stress.py  test_timer_tick.py  test_vt_cli_lockup.py  test_vt_memory_allocation_spec.py  test_vt_raw_mappings.py  test_work_stealing.py
(+282 files in other folders)
